Add SVG support and add Bookmark SVG components

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'JaliscoDriversLicenseTest' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'JaliscoDriversLicenseTestTests' do
     inherit! :complete
     # Pods for testing
