Android and iOS app icon and the related settings

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,8 @@ target 'JaliscoDriversLicenseTest' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'JaliscoDriversLicenseTestTests' do
     inherit! :complete
     # Pods for testing
