--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.2.0",
     "react-redux": "^8.0.2"
   },
