--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 {
   "name": "JaliscoDriversLicenseTest",
-  "displayName": "JaliscoDriversLicenseTest"
+  "displayName": "Jalisco Driver's Test",
+  "splash": {
+    "image": "./src/assets/splash/splash.png",
+    "resizeMode": "cover"
+  }
 }
