--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@ant-design/react-native": "^5.0.1",
+    "@eva-design/eva": "^2.1.1",
     "@os-team/i18next-react-native-language-detector": "^1.0.16",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/eva-icons": "^5.1.2",
     "add": "^2.0.6",
     "i18next": "^21.10.0",
     "react": "17.0.2",
@@ -25,7 +27,7 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.2.0",
+    "react-native-svg": "^13.4.0",
     "react-redux": "^8.0.2",
     "yarn": "^1.22.19"
   },
