Configure Firebase, re-rename the app

--- a/ios/JaliscoDriversLicenseTest/Info.plist
+++ b/ios/JaliscoDriversLicenseTest/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Jalisco Drivers Test</string>
+	<string>JaliscoDriversLicenseTest</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
