--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,14 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+$RNFirebaseAsStaticFramework = true
+
 platform :ios, '11.0'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'JaliscoDriversLicenseTest' do
+  use_frameworks!
+
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -32,7 +36,7 @@ target 'JaliscoDriversLicenseTest' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
