Support both mobile OSs again

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ node_modules/
 npm-debug.log
 yarn-error.log
 firebase.json
+app.json
+
 
 # BUCK
 buck-out/
@@ -60,3 +62,4 @@ buck-out/
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+ios/JaliscoDriversLicenseTest/Info.plist
