--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "pod-install": "cd ios && pod install && cd ..",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "logs:android": "adb logcat '*:S' ReactNative:V ReactNativeJS:V"
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@os-team/i18next-react-native-language-detector": "^1.0.16",
     "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-firebase/admob": "^11.5.0",
-    "@react-native-firebase/app": "11.5.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.3",
@@ -25,7 +25,9 @@
     "react": "17.0.2",
     "react-i18next": "^11.18.6",
     "react-native": "0.68.2",
+    "react-native-clean-project": "^4.0.1",
     "react-native-fs": "^2.20.0",
+    "react-native-google-mobile-ads": "6.3.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
