--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'JaliscoDriversLicenseTest'
+include ':@react-native-firebase_app'
+project(':@react-native-firebase_app').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/app/android')
+include ':@react-native-firebase_database'
+project(':@react-native-firebase_database').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/database/android')
 include ':react-native-google-mobile-ads'
 project(':react-native-google-mobile-ads').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-mobile-ads/android')
 include ':react-native-google-mobile-ads'
