--- a/ios/JaliscoDriversLicenseTest/Info.plist
+++ b/ios/JaliscoDriversLicenseTest/Info.plist
@@ -47,6 +47,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-xxxxxxxx~xxxxxxxx</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
