--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@eva-design/eva": "^2.1.1",
     "@os-team/i18next-react-native-language-detector": "^1.0.16",
     "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-firebase/app": "^16.6.0",
-    "@react-native-firebase/database": "^16.6.0",
+    "@react-native-firebase/app": "16.6.0",
+    "@react-native-firebase/auth": "16.6.0",
+    "@react-native-firebase/database": "16.6.0",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.3",
