--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "pod-install": "cd ios && pod install && cd ..",
+    "gradlew-clean": "cd android && ./gradlew clean && cd ..",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "logs:android": "adb logcat '*:S' ReactNative:V ReactNativeJS:V"
