--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "gradlew-clean": "cd android && ./gradlew clean && cd ..",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "logs:android": "adb logcat '*:S' ReactNative:V ReactNativeJS:V"
+    "logs:android": "adb logcat '*:S' ReactNative:V ReactNativeJS:V",
+    "asset-build:android": "mkdir ./android/app/src/main/assets/ && touch ./android/app/src/main/assets/index.android.bundle",
+    "bundle:android": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle",
+    "debug-apk": "cd android && ./gradlew assembleDebug && cd ..",
+    "clear:android": "rm -rf ./android/app/src/main/res/drawable-* && rm -rf ./android/app/src/main/res/raw",
+    "release-apk": "cd android && ./gradlew --stop && ./gradlew clean app:assembleRelease -x bundleReleaseJsAndAssets && cd .."
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
@@ -31,6 +36,7 @@
     "react-i18next": "^11.18.6",
     "react-native": "0.68.2",
     "react-native-clean-project": "^4.0.1",
+    "react-native-dotenv": "^3.4.7",
     "react-native-fs": "^2.20.0",
     "react-native-google-mobile-ads": "6.3.0",
     "react-native-safe-area-context": "^4.3.1",
